// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should not render shelf section 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword=""
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render company with bold keyword 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword="Seek"
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render job title with bold keyword 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <div>
        <Text
          baseline={true}
          className="positionTitle titleKeyword"
          key="0"
          semiStrong={false}
          strong={true}
          waving={true}
        >
          Senior
        </Text>
        <Text
          baseline={true}
          className="positionTitle"
          key="1"
          semiStrong={true}
          strong={false}
          waving={true}
        >
           Software 
        </Text>
        <Text
          baseline={true}
          className="positionTitle titleKeyword"
          key="2"
          semiStrong={false}
          strong={true}
          waving={true}
        >
          Engineer
        </Text>
        <Text
          baseline={true}
          className="positionTitle"
          key="3"
          semiStrong={true}
          strong={false}
          waving={true}
        >
           (6 months Contract)
        </Text>
      </div>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword="Seek Senior Engineer"
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render jobStreet standout style 1`] = `
<Card
  className="root highlightedBg"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword="Seek"
        />
      </Text>
      <div
        className="jobDescriptionSection"
      >
        <Text
          baseline={true}
          className="bodyDescriptionText"
          intimate={true}
        >
          Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
        </Text>
      </div>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render jobsDB default style 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword="Seek"
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render plain company label 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "name": "Seek Asia",
            }
          }
          keyword=""
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render tag links 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword=""
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with Classified in grey label 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="classifiedLabel"
        >
          Classified
        </span>
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword=""
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with company confidential in grey label 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="confidentialLabel"
        >
          Company Confidential
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword=""
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with featured label 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="featuredLabel"
        >
          Feature
        </span>
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword=""
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with selling points props 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <a
      className="positionLink"
      href="https://www-dev.jobstreet.com.my/en/job/20171002-3-senior-front-end-developer-update-x-2-6100835/origin/dev/sources/3?fr=J"
      target="_blank"
    >
      <Text
        baseline={true}
        className="positionTitle"
        semiStrong={true}
        waving={true}
      >
        Senior Software Engineer (6 months Contract)
      </Text>
    </a>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <CompanyLink
          LinkComponent={[Function]}
          company={
            Object {
              "link": "/jobCard",
              "name": "SEEK Asia",
            }
          }
          keyword=""
        />
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
            <LocationGroup
              LinkComponent={[Function]}
              locations={
                Array [
                  Object {
                    "link": "/jobCard",
                    "name": "Pahang",
                  },
                  Object {
                    "child": Object {
                      "child": Object {
                        "name": "Near Leisure Mall",
                      },
                      "link": "/jobCard",
                      "name": "Cheras",
                    },
                    "link": "/jobCard",
                    "name": "Selangor",
                  },
                ]
              }
            />
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
            <span>
              RM99999 - RM999999
            </span>
          </Text>
        </div>
        <div>
          <Text
            baseline={true}
            className="postingDuration"
            whispering={true}
          >
            1 hour ago
          </Text>
          <Button
            className="shelfToggle"
            color="hyperlink"
            component="button"
          >
            <Text
              baseline={false}
              className="shelfToggleText"
              onClick={[Function]}
              whispering={true}
            >
              more
               
              <ChevronIcon
                className=""
                direction="down"
                svgClassName="shelfToggleIcon"
              />
            </Text>
          </Button>
        </div>
      </div>
    </div>
  </Section>
</Card>
`;
